WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
270585
[Skia] Fix double-free in WebKitTestRunner
https://bugs.webkit.org/show_bug.cgi?id=270585
Summary
[Skia] Fix double-free in WebKitTestRunner
Claudio Saavedra
Reported
2024-03-06 11:07:45 PST
.
Attachments
Add attachment
proposed patch, testcase, etc.
Claudio Saavedra
Comment 1
2024-03-06 11:14:00 PST
Pull request:
https://github.com/WebKit/WebKit/pull/25543
EWS
Comment 2
2024-03-07 02:36:46 PST
Committed
275784@main
(669cd08179b2): <
https://commits.webkit.org/275784@main
> Reviewed commits have been landed. Closing PR #25543 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-03-07 02:37:15 PST
<
rdar://problem/124199775
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug