[Skia] Fix double-free in WebKitTestRunner https://bugs.webkit.org/show_bug.cgi?id=270585

Reviewed by Carlos Garcia Campos and Adrian Perez de Castro.

sk_sp::get() returns a raw pointer without increasing
the reference count. To preserve semantics we need
to explicitly increase it when returning the snapshot,
otherwise we risk a double-free.

* Tools/wpe/backends/fdo/HeadlessViewBackendFdo.cpp:
(WPEToolingBackends::HeadlessViewBackend::snapshot):

Canonical link: https://commits.webkit.org/275784@main